<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ShakeAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="good_luck">祝你好运！</string>
    <string name="shake">摇一摇</string>
    <string name="check_punishment">查看惩罚</string>
    <string name="content_listview">内容列表</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="example">例子</string>
    <string name="add_content">添加内容</string>
    <string name="hint">请输入惩罚措施的内容后按回车</string>
    <string name="result">结果提示</string>
    <string name="succeed">成功</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>

</resources>