<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="245dp"
            android:layout_height="30dp"
            android:background="@drawable/corner_background_white_half_top"
            android:gravity="left"
            android:padding="8dp"
            android:text="@string/result"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_width="245dp"
            android:layout_height="1.0dp"
            android:background="@color/blue_top_bar_color" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/content"
                android:layout_width="245dp"
                android:layout_height="130dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/succeed"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="245dp"
            android:layout_height="1.0dp"
            android:background="#CCCCCC" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="1.0dp"
            android:layout_height="match_parent"
            android:background="#CCCCCC" >
        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:background="@drawable/corner_background_white_half_bottom">

        <Button
            android:id="@+id/cancel"
            android:layout_width="122.5dp"
            android:layout_height="34dp"
            android:text="@string/cancel"
            android:textSize="12sp"
            android:textColor="#666666" 
            android:background="@drawable/corner_background_white_half_left"/>
        
        <LinearLayout
            android:layout_width="1.0dp"
            android:layout_height="34dp"
            android:background="#CCCCCC" >
        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="122.5dp"
            android:layout_height="34dp"
            android:textColor="@color/blue_top_bar_color"
            android:textSize="12sp"
            android:text="@string/sure"
            android:background="@drawable/corner_background_white_half_right" />
        
    </LinearLayout>
      <!--   <Button
            android:id="@+id/submit"
            android:layout_width="245dp"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:background="@drawable/corner_background_white_half_bottom"
            android:text="@string/sure"
            android:textColor="@color/blue_top_bar_color"
            android:textSize="12sp"
            tools:ignore="InefficientWeight" /> -->
         
    </LinearLayout>

</LinearLayout>